# McBopomofo

./: .copilot-instructions.md  .gitignore  .swift-format  .travis.yml  ACKNOWLEDGEMENTS.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE.txt  Makefile  README.markdown  README.md  RELEASE_NOTES.md  algorithm.md  claude_code_user_model_dev.md  requirements.md
Source/: .clang-format  AppDelegate.h  AppDelegate.m  AppDelegate.swift  CMakeLists.txt  CustomUrlHandler.swift  DictionaryService.swift  EmacsKeyHelper.swift  InputLogger.swift  InputMacro.swift  InputMethodController+CandidateControllerDelegate.swift  InputMethodController+KeyHandlerDelegate.swift  InputMethodController.h  InputMethodController.mm  InputMethodController.swift  InputSourceHelper.swift  InputState.swift  KeyHandler.h  KeyHandler.mm  KeyHandler.swift  KeyHandlerInput.swift  LanguageModelManager+Privates.h  LanguageModelManager.h  LanguageModelManager.mm  Makefile  McBopomofo-Bridging-Header.h  McBopomofo-Info.plist  McBopomofo-Prefix.pch  McBopomofoService.swift  NonModalAlertWindowController.swift  NonModalAlertWindowController.xib  NumberInputHelper.swift  OVInputSourceHelper.h  OVInputSourceHelper.m  OVNonModalAlertWindowController.h  OVNonModalAlertWindowController.m  OVNonModalAlertWindowController.xib  OpenCCBridge.swift  Preferences.swift  PreferencesWindowController.h  (+17 more)
Source/Base.lproj/: Credits.rtf  InfoPlist.strings  Localizable.strings  MainMenu.xib  preferences.xib  template-data-plain-bpmf.txt  template-data.txt  template-exclude-phrases-plain-bpmf.txt  template-exclude-phrases.txt  template-phrases-replacement.txt
Source/CandidateUI/: CandidateController.swift  HorizontalCandidateController.swift  VTCandidateController.h  VTCandidateController.m  VTHorizontalCandidateController.h  VTHorizontalCandidateController.m  VTHorizontalCandidateView.h  VTHorizontalCandidateView.m  VTVerticalCandidateController.h  VTVerticalCandidateController.m  VTVerticalCandidateTableView.h  VTVerticalCandidateTableView.m  VTVerticalKeyLabelStripView.h  VTVerticalKeyLabelStripView.m  VerticalCandidateController.swift
Source/Data/: .gitignore  1-4w.occ  4_in_5.txt  4_in_6.txt  5_in_6.txt  AGENTS.md  BPMFBase.txt  BPMFMappings.txt  BPMFPunctuations.txt  Macros.txt  Makefile  Postprocess.txt  README  README.md  Symbols.txt  associated-phrases.txt  associated-punctuation.txt  bpmfvs-pua.txt  bpmfvs-variants.txt  exclusion.txt  heterophony.list  heterophony1.list  heterophony2.list  heterophony3.list  phrase.list  phrase.occ  pyproject.toml  textpool.rc
Source/Data/bin_legacy/: DEPRECATED.md  bpmfmap.py  cook-plain-bpmf.py  cook_util.py  count.bash  count.occurrence.py  derive_associated_phrases.py
Source/Data/curation/: README.md  __init__.py  requirements.txt
Source/Data/memo/: blacklist.txt  covered_by_others.txt  covered_by_singles.txt  falsecount.txt
Source/Data/scripts/: analyze_data.py  audit_encoding.py  check.py  count_occurrences.py  map_bpmf.py
Source/Data/tests/: test_grid.py  test_mandarin.py  test_postprocess.py
Source/Engine/: AssociatedPhrases.cpp  AssociatedPhrases.h  AssociatedPhrasesV2.cpp  AssociatedPhrasesV2.h  AssociatedPhrasesV2Test.cpp  ByteBlockBackedDictionary.cpp  ByteBlockBackedDictionary.h  ByteBlockBackedDictionaryBenchmark.cpp  ByteBlockBackedDictionaryTest.cpp  CMakeLists.txt  ContextualUserModel.cpp  ContextualUserModel.h  ContextualUserModelTest.cpp  EmojiLM.h  EngineProfile.cpp  FastLM.cpp  FastLM.h  KeyValueBlobReader.cpp  KeyValueBlobReader.h  KeyValueBlobReaderTest.cpp  McBopomofoLM.cpp  McBopomofoLM.h  McBopomofoLMTest.cpp  MemoryMappedFile.cpp  MemoryMappedFile.h  MemoryMappedFileTest.cpp  ParselessLM.cpp  ParselessLM.h  ParselessLMBenchmark.cpp  ParselessLMTest.cpp  ParselessPhraseDB.cpp  ParselessPhraseDB.h  ParselessPhraseDBBenchmark.cpp  ParselessPhraseDBTest.cpp  PhraseReplacementMap.cpp  PhraseReplacementMap.h  PhraseReplacementMapTest.cpp  ReadingTrie.cpp  ReadingTrie.h  ReadingTrieTest.cpp  (+14 more)
Source/Engine/Gramambular/: Bigram.h  BlockReadingBuilder.h  CMakeLists.txt  Gramambular.h  GramambularTest.cpp  Grid.cpp  Grid.h  KeyValuePair.h  LanguageModel.h  Node.h  NodeAnchor.h  Span.h  Unigram.h  Walker.h
Source/Engine/Mandarin/: .clang-format  CMakeLists.txt  Mandarin.cpp  Mandarin.h  MandarinTest.cpp
Source/Engine/OpenVanilla/: OVAroundFilter.h  OVBase.h  OVBenchmark.h  OVCINDataTable.h  OVCINDatabaseService.h  OVCINToSQLiteConvertor.h  OVCandidateService.h  OVDatabaseService.h  OVDateTimeHelper.h  OVEncodingService.h  OVKey.h  (+21 more)
Source/English.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.xib  preferences.xib
Source/IconMaker/: AppIconRendererView.h  AppIconRendererView.m  BopomofoIconRenderView.h  BopomofoIconRenderView.m  IconMaker-Info.plist  IconMaker-Prefix.pch  IconMakerAppDelegate.h  IconMakerAppDelegate.m  ImageZoomInView.h  ImageZoomInView.m  TISIconRendererView.h  TISIconRendererView.m  main.m
Source/Images/: Bopomofo.tiff  Bopomofo@2x.tiff  BopomofoSelected.tiff  BopomofoTextMenu.tiff  BopomofoTextMenu@2x.tiff  McBopomofo.icns  PlainBopomofo.tiff  PlainBopomofo@2x.tiff  favicon.tiff
Source/Installer/: AppDelegate.h  AppDelegate.m  AppDelegate.swift  ArchiveUtil.h  ArchiveUtil.m  ArchiveUtil.swift  BundleTranslocate.h  BundleTranslocate.m  Installer-Info.plist  Installer-Prefix.pch  InstallerUtil.swift  McBopomofoInstaller-Bridging-Header.h  main.m
Source/Lettuce.xcodeproj/: project.pbxproj
Source/PreferencesUI/: PreferencesModel.swift  PreferencesUiWindowController.swift  PreferencesView.swift  PreferencesWindowController.swift
Source/Tools/: genRTF.py  run-engine-profiler.sh  tistool.m
Source/en.lproj/: Credits.rtf  InfoPlist.strings  Localizable.strings  MainMenu.xib  ServicesMenu.strings  preferences.xib
Source/zh-Hant.lproj/: Credits.rtf  InfoPlist.strings  Localizable.strings  MainMenu.xib  ServicesMenu.strings  UpdateNotificationController.xib  preferences.xib  template-data-plain-bpmf.txt  template-data.txt  template-exclude-phrases-plain-bpmf.txt  template-exclude-phrases.txt  template-phrases-replacement.txt
(+153 files in other folders)
